--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1524,7 +1524,7 @@ ez-radio-buttons ez-radio-line {
 }
 
 [type="radio"]:disabled + span ez-radio-line {
-    background-color: #e5e5e5;
+    background-color: #eaeaea;
 }
 
 ez-radio-buttons ez-radio-line-label {
@@ -2457,7 +2457,7 @@ ez-tsl-tests ez-tsl-test-header-right {
 }
 
 ez-tsl-tests.editable .ez-collapsible:hover ez-tsl-edit-title,
-ez-tsl-tests.editable .ez-collapsible:hover ez-tsl-test-header-right {
+ez-tsl-tests.editable .ez-collapsible ez-tsl-test-header-right {
     display: flex;
     align-items: center;
 }
@@ -3112,6 +3112,11 @@ button i.material-icons {
     font-size: 1.6rem;
     background-color: #333;
     min-width: 20rem;
+}
+
+.toast ez-icon {
+    margin-right: 1rem;
+    color: #fff;
 }
 
 .toast .msg {
