--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -1182,6 +1182,13 @@ ez-about {
     padding: 2rem;
 }
 
+ez-about-sponsors {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
 
 /** Common **/
 
