--- a/wui/static/css/exercise.css
+++ b/wui/static/css/exercise.css
@@ -106,6 +106,11 @@
     justify-content: center;
 }
 
+#exercise-text blockquote {
+    margin: 3rem 0;
+    border-left: 5px solid var(--ez-green);
+}
+
 
 /* Legacy pure-HTML rules */
 
