wui update exercise style

--- a/wui/static/css/exercise.css
+++ b/wui/static/css/exercise.css
@@ -88,8 +88,13 @@
 }
 
 #exercise-text details > .content {
-    border-top: 1px solid #bbb;
-    border-bottom: 1px solid #bbb;
+    padding: 1rem 2rem;
+    background-color: #f6f6f6;
+}
+
+/* The following sibling - prevents margin when listing is not followed by anything, e.g. inside collapsible */
+#exercise-text .listingblock + * {
+    margin-top: 2rem;
 }
 
 #exercise-text .listingblock > .title {
@@ -107,7 +112,6 @@
 }
 
 #exercise-text blockquote {
-    margin: 3rem 0;
     border-left: 5px solid var(--ez-green);
 }
 
