wui code editor show text cursor in editor part where there are no lines

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -821,6 +821,15 @@ ez-code-edit.readonly .CodeMirror-cursors {
     visibility: hidden;
 }
 
+/* Text cursor on empty editor part where there are no lines */
+.CodeMirror-scroll {
+    cursor: text;
+}
+
+.CodeMirror-gutter {
+    cursor: auto;
+}
+
 
 /* Merge */
 
