--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -844,6 +844,14 @@ ez-code-edit.readonly .CodeMirror-cursors {
     cursor: auto;
 }
 
+ez-code-editor-field-help {
+    display: flex;
+    margin-top: 0.6rem;
+    font-size: 1.2rem;
+    /* same as text fields */
+    color: rgba(0,0,0,0.54);
+}
+
 
 /* Merge */
 
@@ -2862,6 +2870,38 @@ ez-tsl-section-title {
     font-size: 1.1em;
     margin-top: 3rem;
     margin-bottom: 1rem;
+}
+
+ez-tsl-function-call-test .editor-wrapper.no-gutter {
+    padding: 0;
+    margin: 0;
+}
+
+ez-tsl-function-call-test .CodeMirror-scroll {
+    min-height: inherit;
+    max-width: inherit;
+}
+
+ez-tsl-function-call-test .CodeMirror {
+    background: #f5f5f5;
+}
+
+ez-tsl-function-call-test .editor-read-only .CodeMirror {
+    background: #fff;
+    /* same as text fields */
+    border-bottom: 1px dotted rgba(0,0,0,0.42);
+}
+
+ez-tsl-function-call-test .editor-read-only .CodeMirror .CodeMirror-line * {
+    /* disable syntax highlighting when disabled */
+    color: var(--ez-text-inactive) !important;
+}
+
+fieldset.ez-tsl-check {
+    margin-top: 2rem;
+    border: 1px solid #ccc;
+    border-radius: .5rem;
+    color: var(--ez-text-inactive);
 }
 
 
