wui tsl producer cursor to default

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -3243,6 +3243,7 @@ ez-feedback-producer {
     align-items: center;
     justify-content: end;
     font-size: .7em;
+    cursor: default;
 }
 
 ez-feedback-producer ez-icon {
