EZ-1629 allow modifying threshold in update course exercise modal

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -678,6 +678,11 @@ ez-student-course-exercise > ez-block-container {
     padding-top: 1rem;
 }
 
+.update-course-ex-title-modal .update-course-exercise-threshold {
+    display: block;
+    padding-top: 1rem;
+}
+
 ez-deadline-close,
 ez-deadline-close ez-icon {
     color: var(--ez-yellow-text);
