wui ezcoll underline actionable attr on hover

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -2514,6 +2514,7 @@ ezc-attr-text.actionable {
 ezc-attr-text.actionable:hover {
     cursor: pointer;
     font-weight: 500;
+    text-decoration: underline;
 }
 
 /* If attrs should take up all space */
